--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   </head>
   <body>
     <canvas id="myCanvas" width="480" height="320"></canvas>
-    <script src="scripts.js"></script>
+    <script src="scripts.js" type="module"></script>
   </body>
-
 </html>
